--- a/app/pages/components/contacts-index.pug
+++ b/app/pages/components/contacts-index.pug
@@ -1,2 +1,2 @@
-.flex-grow-1.pt-5.px-4.scrollable.tab-pane.fade.show.active(id='contacts' role='tabpanel' aria-labelledby='nav-contacts-tab')
+.flex-grow-1.pt-5.px-4.scrollable.tab-pane.fade.show.active(id='contacts' role='tabpanel' aria-labelledby='nav-contacts-tab' tabindex=0)
   include contacts
