--- a/app/pages/components/desktop-chat.pug
+++ b/app/pages/components/desktop-chat.pug
@@ -1,2 +1,2 @@
-.col-md-7.col-lg-8.h-100.d-none.d-md-flex.flex-md-column
+.col-md-7.col-lg-8.h-100.d-none.d-md-flex.flex-md-column(tabindex=0)
   include chat
