--- a/app/pages/layout/layout.pug
+++ b/app/pages/layout/layout.pug
@@ -11,10 +11,10 @@ html.h-100(lang="ru")
       .row.h-100.gx-0.bg-white.rounded-md.overflow-hidden
         .main-area.col-md-5.col-lg-4.d-flex.flex-column-reverse.flex-md-column.border-end-md.h-100
           block header
-          .h-100.scrollable.tab-content(id='nav-tabContent')
+          .h-100.scrollable.tab-content
             block chat
             block dialogs
             block contacts
             block profile
         block desktop-area
-  <script src="js/bootstrap.min.js"></script>
+  script(src="js/bootstrap.min.js")
