--- a/app/pages/components/greeting-card.pug
+++ b/app/pages/components/greeting-card.pug
@@ -1,5 +1,5 @@
 .desktop-area.d-none.d-md-flex.col-md-7.col-lg-8.justify-content-center.align-items-center.h-100
   .text-center
-    img.mx-auto.d-block.rounded-pill(src="images/avatar_1.jpg", alt="" width="200px" height="auto")
+    img.mx-auto.d-block.rounded-pill(src="images/avatar_1.jpg", alt="" width="200" height="200")
     h6.mt-3.mb-1 Привет, Кодовёнок
     p.text-secondary.fs-7 Выбери чат, чтобы начать общаться
