--- a/app/pages/components/nav.pug
+++ b/app/pages/components/nav.pug
@@ -1,10 +1,11 @@
 nav.navbar.header.bg-primary.p-3
-  +icon("logo", "25px")(class="me-4")
+  a(href="#")
+    +icon("logo", "25px")(class="me-4")
   ul.nav.small.text-light.d-flex.justify-content-xl-between.justify-content-end.flex-grow-1
     block current-chat
     block contacts
     block dialogs
     li.nav-item
-      a.nav-link(href="#profile" data-bs-toggle="tab" data-bs-target="#profile")
+      a.nav-link(id="nav-profile-tab" href="#profile" data-bs-toggle="tab" data-bs-target="#profile" role="tab")
         +icon("person", "25px")(class="me-2")
         span.d-none.d-xl-inline Профиль
