--- a/app/pages/mixins/dialog.pug
+++ b/app/pages/mixins/dialog.pug
@@ -1,5 +1,5 @@
 mixin dialog(name, message, time, avatar)
-  a.message.mb-3
+  a.message.mb-3(tabindex=0)
     .message-avatar
       img.avatar(src=avatar, alt="")
     .message-body
