--- a/app/pages/components/profile.pug
+++ b/app/pages/components/profile.pug
@@ -1,4 +1,4 @@
-.h-100.pt-5.px-4.scrollable.tab-pane.fade(id='profile' role='tabpanel' aria-labelledby='nav-profile-tab' tabindex=0)
+section.h-100.pt-5.px-4.scrollable.tab-pane.fade(id='profile' role='tabpanel' aria-labelledby='nav-profile-tab' tabindex=0)
   h2.h2.mb-4 Профиль
   form.mb-5
     +light-input('Поиск по сообщениям')
