--- a/app/pages/layout/layout.pug
+++ b/app/pages/layout/layout.pug
@@ -6,6 +6,7 @@ html.h-100(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Layout Designer Project 3
     link(rel="stylesheet", href="styles/style.css")
+    script(defer src="js/bootstrap.min.js")
   body.bg-gray.h-100
     .container-xxl.p-0.p-md-4.h-100
       .row.h-100.gx-0.bg-white.rounded-md.overflow-hidden
@@ -17,4 +18,3 @@ html.h-100(lang="ru")
             block contacts
             block profile
         block desktop-area
-  script(src="js/bootstrap.min.js")
