--- a/app/pages/mixins/icon.pug
+++ b/app/pages/mixins/icon.pug
@@ -4,7 +4,5 @@ mixin icon(id, width = "16px", height = "")
       height = width;
     }
   - const path = "images/sprite.svg#";
-  - const icon = "icon ";
-  - className = attributes.class || '';
-  svg(class!=icon+className, width!= width, height!= height)
+  svg(width!= width, height!= height)&attributes(attributes)
     use(xlink:href!=path+id)
