--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -16,5 +16,5 @@
 @import "./components/contact";
 @import "./components/message";
 @import "./components/avatar";
-@import "./components/icons";
+@import "./components/btn-pill";
 @import "./components/scrollable";
