--- a/app/pages/components/dialogs-chat.pug
+++ b/app/pages/components/dialogs-chat.pug
@@ -1,2 +1,2 @@
-.flex-grow-1.pt-5.px-4.scrollable.tab-pane.fade.show.active(id="chats" role="tabpanel" aria-labelledby="nav-chats-tab" tabindex=0)
+section.flex-grow-1.pt-5.px-4.scrollable.tab-pane.fade.show.active(id="chats" role="tabpanel" aria-labelledby="nav-chats-tab" tabindex=0)
   include dialogs
