--- a/app/pages/components/mobile-chat.pug
+++ b/app/pages/components/mobile-chat.pug
@@ -1,3 +1,3 @@
-.h-100.d-lg-none.tab-pane.fade(id='current-chat' role='tabpanel' aria-labelledby='nav-current-chat-tab' tabindex=0)
+section.h-100.d-lg-none.tab-pane.fade(id='current-chat' role='tabpanel' aria-labelledby='nav-current-chat-tab' tabindex=0)
   .h-100.d-flex.flex-column
     include chat
