--- a/app/scss/components/btn-pill.scss
+++ b/app/scss/components/btn-pill.scss
@@ -1,6 +1,6 @@
 @use "sass:map";
 
-.send-icon {
+.btn-pill {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,13 +8,7 @@
   width: 50px;
   height: 50px;
 
-  color: $white;
-
-  background-color: map.get($theme-colors, "primary");
-
+  border-width: 0;
   border-radius: $border-radius-pill;
-}
 
-.icon {
-  fill: $light;
 }
