delete redundant tag a

--- a/app/pages/components/chat.pug
+++ b/app/pages/components/chat.pug
@@ -1,4 +1,4 @@
-a.contact.sticky-top.border-bottom.px-3
+.contact.sticky-top.border-bottom.px-3
   img.avatar(src="images/avatar_4.jpg", alt="")
   .contact-body
     p.contact-name= "Вениамин Редакторович"
