fix contact avatar margin

--- a/app/pages/mixins/contact.pug
+++ b/app/pages/mixins/contact.pug
@@ -1,6 +1,6 @@
 mixin contact(name, status, avatar, href = "#")
   a.contact.contact-hover.shadow-sm.mb-3(href= href tabindex=0)
-    img.avatar(src=avatar, alt="")
+    img.ms-3.avatar(src=avatar, alt="")
     .contact-body
       p.contact-name= name
       p.contact-status= status
