add missed chat post

--- a/app/pages/components/chat.pug
+++ b/app/pages/components/chat.pug
@@ -20,6 +20,11 @@
   +outbound("А, слушай, купи мне ещё Macbook Pro. А то хочется работать в Хекслете, а там это условие",
    "3 минут назад",
    "images/avatar_1.jpg")
+  +incoming(
+    "Вениамин Редакторович",
+     "о_О",
+      "Только что",
+      "images/avatar_4.jpg")
 form.mx-lg-5.py-3.px-4.d-flex.align-items-center.border-top(action="#")
   div.flex-grow-1
     input.form-control-plaintext.p-0.text-secondary.me-3(placeholder= "Напишите сообщение...")
